[package]
name = "dust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38"
log = "0.4.21"
env_logger = "0.11.3"
xcb = { version = "1.3.0", features = [
  "debug_atom_names",
  "dri2",
  "dri3",
  "randr",
  "xkb",
  "xinput",
] }
